--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>San — Data Analyst Portfolio</title>
+  <title>Sanika — Data Analyst Portfolio</title>
   <meta name="description" content="Data Analyst Portfolio — projects, case studies, dashboards, and notebooks." />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="site-header">
-      <a class="brand" href="index.html">San<span class="dot">.</span></a>
+      <a class="brand" href="index.html">Sanika<span class="dot">.</span></a>
       <nav>
         <a href="projects.html">Projects</a>
         <a href="about.html">About</a>
@@ -24,7 +24,7 @@
   <main class="container">
     <section class="hero">
       <div class="hero-text">
-        <h1>Hi, I'm San — Data Analyst</h1>
+        <h1>Hi, I'm Sanika — Data Analyst</h1>
         <p>I turn messy data into clear decisions. I love SQL, Python, and storytelling with dashboards.</p>
         <div class="hero-actions">
           <a class="btn" href="projects.html">View Projects</a>
@@ -52,7 +52,7 @@
     </section>
   </main>
     <footer class="site-footer">
-      <p>© 2025 San — <a href="https://github.com/your-username">GitHub</a> · <a href="mailto:hello@example.com">Email</a> · <a href="https://www.linkedin.com/in/your-linkedin">LinkedIn</a></p>
+      <p>© 2025 Sanika — <a href="https://github.com/your-username">GitHub</a> · <a href="mailto:hello@example.com">Email</a> · <a href="https://www.linkedin.com/in/your-linkedin">LinkedIn</a></p>
     </footer>
     <script src="assets/js/main.js"></script>
 </body>
