--- a/index.html
+++ b/index.html
@@ -1,60 +1,285 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sanika — Data Analyst Portfolio</title>
-  <meta name="description" content="Data Analyst Portfolio — projects, case studies, dashboards, and notebooks." />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Sanika | Data Analyst Portfolio</title>
+  <meta name="description" content="Portfolio of Sanika — Data Analyst. Projects, skills, experience, and contact." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg: #0b0d10;
+      --card: #12161b;
+      --muted: #8b97a5;
+      --text: #e7edf3;
+      --brand: #66e3c4;
+      --brand-2: #7aa5ff;
+      --ring: rgba(102, 227, 196, .45);
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+      --radius: 16px;
+    }
+    * { box-sizing: border-box; }
+    html,body{ margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background: radial-gradient(1200px 600px at 10% -10%, rgba(122,165,255,.12), transparent), radial-gradient(1000px 500px at 110% 10%, rgba(102,227,196,.12), transparent), var(--bg); color: var(--text); }
+    a{ color: inherit; text-decoration: none; }
+    .container{ width:min(1100px, 92vw); margin-inline:auto; }
+    .nav{ position: sticky; top: 0; backdrop-filter: blur(8px); background: rgba(11,13,16,.6); border-bottom: 1px solid rgba(255,255,255,.06); z-index: 80; }
+    .nav .inner{ display:flex; align-items:center; justify-content:space-between; padding: 14px 0; }
+    .brand{ font-weight:800; letter-spacing:.4px; display:flex; gap:.5rem; align-items:center; }
+    .brand .dot{ width:10px; height:10px; background: linear-gradient(135deg, var(--brand), var(--brand-2)); border-radius:50%; box-shadow: 0 0 0 6px var(--ring); }
+    .nav a.btn{ padding:10px 14px; border:1px solid rgba(255,255,255,.1); border-radius: 999px; transition: .2s ease; }
+    .nav a.btn:hover{ border-color: var(--brand); box-shadow: 0 0 0 6px var(--ring); }
 
+    /* HERO */
+    .hero{ padding: 72px 0 28px; display:grid; grid-template-columns: 1.3fr .7fr; gap: 36px; align-items:center; }
+    @media (max-width: 880px){ .hero{ grid-template-columns: 1fr; padding-top:46px; } }
+    .pill{ display:inline-flex; align-items:center; gap:.5rem; border:1px solid rgba(255,255,255,.12); color: var(--muted); border-radius:999px; padding:8px 12px; font-size: 12px; }
+    .pill .spark{ width:8px; height:8px; border-radius:50%; background: var(--brand); box-shadow:0 0 0 6px var(--ring); }
+    .hero h1{ font-size: clamp(32px, 5vw, 54px); line-height:1.05; margin: 14px 0 10px; }
+    .hero p.lead{ color: var(--muted); font-size: clamp(15px, 2vw, 18px); }
+    .cta{ margin-top: 18px; display:flex; gap:12px; flex-wrap:wrap; }
+    .btn{ border:none; border-radius: 999px; padding:12px 18px; font-weight:600; cursor:pointer; transition:.2s; }
+    .btn-primary{ background: linear-gradient(135deg, var(--brand), var(--brand-2)); color:#0b0d10; }
+    .btn-ghost{ background: transparent; border:1px solid rgba(255,255,255,.16); color: var(--text); }
+    .btn:hover{ transform: translateY(-1px); box-shadow: var(--shadow); }
+
+    .statbar{ display:flex; gap:14px; margin-top:20px; flex-wrap:wrap; }
+    .chip{ background: rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08); color: var(--muted); padding:8px 12px; border-radius: 999px; font-size: 12px; }
+
+    .card{ background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)); border:1px solid rgba(255,255,255,.08); border-radius: var(--radius); box-shadow: var(--shadow); }
+    .aside{ padding:18px; display:grid; gap:16px; }
+
+    .section{ padding: 50px 0; }
+    .section h2{ margin:0 0 14px; font-size: clamp(22px, 3vw, 28px); }
+    .muted{ color: var(--muted); }
+
+    /* GRID */
+    .grid{ display:grid; gap:18px; grid-template-columns: repeat(3, 1fr); }
+    @media (max-width: 980px){ .grid{ grid-template-columns: repeat(2, 1fr); } }
+    @media (max-width: 640px){ .grid{ grid-template-columns: 1fr; } }
+
+    /* PROJECT CARD */
+    .project{ padding:18px; display:grid; gap:10px; }
+    .project h3{ margin:0; font-size: 18px; }
+    .tagrow{ display:flex; gap:8px; flex-wrap: wrap; }
+    .tag{ font-size: 11px; padding:6px 10px; border-radius:999px; border:1px solid rgba(255,255,255,.12); color: var(--muted); }
+    .project a{ display:inline-block; margin-top:6px; font-weight:600; color: var(--brand-2); }
+
+    /* EXPERIENCE */
+    .timeline{ position:relative; }
+    .timeline::before{ content:""; position:absolute; left:14px; top:0; bottom:0; width:2px; background: linear-gradient(var(--brand), transparent); opacity:.4; }
+    .role{ position:relative; padding-left:42px; margin: 18px 0; }
+    .role::before{ content:""; position:absolute; left:8px; top:.45rem; width:12px; height:12px; border-radius:50%; background: var(--brand); box-shadow: 0 0 0 6px var(--ring); }
+    .role h3{ margin:0; font-size: 17px; }
+
+    footer{ padding: 36px 0 60px; color: var(--muted); text-align:center; }
+    footer a{ color: var(--brand-2); }
+  </style>
 </head>
 <body>
-    <header class="site-header">
-      <a class="brand" href="index.html">Sanika<span class="dot">.</span></a>
-      <nav>
-        <a href="projects.html">Projects</a>
-        <a href="about.html">About</a>
-        <a href="blog.html">Blog</a>
-        <a class="cta" href="assets/resume/San_Resume.pdf">Resume</a>
-      </nav>
-    </header>
+  <nav class="nav">
+    <div class="container inner">
+      <div class="brand"><span class="dot"></span> Sanika • Data Analyst</div>
+      <div style="display:flex; gap:10px; align-items:center;">
+        <a class="btn" href="#projects">Projects</a>
+        <a class="btn" href="#experience">Experience</a>
+        <a class="btn" href="#skills">Skills</a>
+        <a class="btn" href="#contact">Contact</a>
+      </div>
+    </div>
+  </nav>
+
+  <header class="container hero">
+    <div>
+      <span class="pill"><span class="spark"></span> Open to freelance & collaborations</span>
+      <h1>Hi, I’m <span style="background:linear-gradient(135deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; background-clip:text; color:transparent;">Sanika</span>.<br/>I turn messy data into clear decisions.</h1>
+      <p class="lead">Data Analyst with strengths in SQL, Python, Excel, dashboards, and storytelling. I love building tidy pipelines and postable insights for marketing, ops, and product teams.
+      <!-- TODO: Replace this sentence with your own one‑line value. --></p>
+      <div class="cta">
+        <a class="btn btn-primary" href="#projects">View projects</a>
+        <a class="btn btn-ghost" href="#contact">Contact me</a>
+      </div>
+      <div class="statbar">
+        <span class="chip">SQL • Python • Excel</span>
+        <span class="chip">Power BI / Tableau</span>
+        <span class="chip">A/B testing</span>
+        <span class="chip">ETL & automation</span>
+      </div>
+    </div>
+    <aside class="card aside">
+      <div>
+        <h3 style="margin:0 0 6px; font-size:16px;">Highlights</h3>
+        <ul class="muted" style="margin:0; padding-left:18px; line-height:1.6;">
+          <li><!-- TODO: Replace:  -->Improved campaign ROAS by 18% using cohort analysis</li>
+          <li>Built automated KPI deck saving 3 hrs/week</li>
+          <li>Cleaned 1M+ row CRM dataset for churn model</li>
+        </ul>
+      </div>
+      <div>
+        <h3 style="margin:0 0 6px; font-size:16px;">Currently</h3>
+        <p class="muted" style="margin:0;">Learning Korean • Exploring event-tech & experiential analytics</p>
+      </div>
+    </aside>
+  </header>
+
   <main class="container">
-    <section class="hero">
-      <div class="hero-text">
-        <h1>Hi, I'm Sanika — Data Analyst</h1>
-        <p>I turn messy data into clear decisions. I love SQL, Python, and storytelling with dashboards.</p>
-        <div class="hero-actions">
-          <a class="btn" href="projects.html">View Projects</a>
-          <a class="btn ghost" href="about.html">About Me</a>
+    <!-- SKILLS -->
+    <section id="skills" class="section">
+      <h2>Skills</h2>
+      <p class="muted">SQL (CTEs, window functions), Python (pandas, numpy, matplotlib), Excel (Power Query, pivots), BI (Power BI/Tableau), APIs, Web scraping, Experimental design, Statistics, Data quality, Documentation.</p>
+    </section>
+
+    <!-- PROJECTS -->
+    <section id="projects" class="section">
+      <h2>Projects</h2>
+      <p class="muted">A few selected works. Filter by tag:</p>
+      <div class="cta" id="filters"></div>
+      <div class="grid" id="projectGrid" aria-live="polite"></div>
+    </section>
+
+    <!-- EXPERIENCE -->
+    <section id="experience" class="section">
+      <h2>Experience</h2>
+      <div class="timeline" id="exp">
+        <div class="role">
+          <h3>Data Analyst — <span class="muted">Company Name</span></h3>
+          <div class="muted">MM YYYY – Present • City</div>
+          <ul class="muted" style="line-height:1.6;">
+            <li><!-- TODO: bullet from resume -->Built automated lead-scoring model; increased MQL‑to‑SQL by 12%.</li>
+            <li>Designed exec dashboard (Power BI) with 20+ KPIs; reduced weekly reporting time by 70%.</li>
+          </ul>
+        </div>
+        <div class="role">
+          <h3>Analyst Intern — <span class="muted">Company Name</span></h3>
+          <div class="muted">MM YYYY – MM YYYY • City</div>
+          <ul class="muted" style="line-height:1.6;">
+            <li>Cleaned and joined 15 CSV sources; built churn cohorts in SQL.</li>
+            <li>Presented insights deck to marketing leadership.</li>
+          </ul>
         </div>
       </div>
-      <img src="assets/images/hero-analytics.svg" alt="Analytics illustration" class="hero-illust" />
     </section>
 
-    <section>
-      <h2>Selected Work</h2>
-      <div id="project-cards" class="grid"></div>
-      <a class="more-link" href="projects.html">See all projects →</a>
+    <!-- EDUCATION & CERTS -->
+    <section class="section">
+      <h2>Education & Certifications</h2>
+      <div class="grid">
+        <div class="card" style="padding:16px;">
+          <h3 style="margin:0 0 6px; font-size:18px;">Degree — University</h3>
+          <div class="muted">Major • YYYY</div>
+        </div>
+        <div class="card" style="padding:16px;">
+          <h3 style="margin:0 0 6px; font-size:18px;">Certification</h3>
+          <div class="muted">Issuer • YYYY</div>
+        </div>
+        <div class="card" style="padding:16px;">
+          <h3 style="margin:0 0 6px; font-size:18px;">Workshops</h3>
+          <div class="muted">A/B testing • SQL performance • Data storytelling</div>
+        </div>
+      </div>
     </section>
 
-    <section>
-      <h2>What I Do</h2>
-      <ul class="pill-list">
-        <li>SQL & Data Modeling</li>
-        <li>Python (pandas, numpy)</li>
-        <li>BI Dashboards (Tableau/Power BI/Looker)</li>
-        <li>Experimentation & A/B Testing</li>
-        <li>Customer Insights & Cohorts</li>
-      </ul>
+    <!-- CONTACT -->
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <p class="muted">Reach out for freelance projects, collaborations, or a friendly chat.</p>
+      <div class="cta">
+        <a class="btn btn-primary" href="mailto:your.email@example.com">Email</a>
+        <a class="btn btn-ghost" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn btn-ghost" href="https://github.com/san1201" target="_blank" rel="noreferrer">GitHub</a>
+      </div>
     </section>
   </main>
-    <footer class="site-footer">
-      <p>© 2025 Sanika — <a href="https://github.com/your-username">GitHub</a> · <a href="mailto:hello@example.com">Email</a> · <a href="https://www.linkedin.com/in/your-linkedin">LinkedIn</a></p>
-    </footer>
-    <script src="assets/js/main.js"></script>
+
+  <footer>
+    <div class="container">© <span id="year"></span> Sanika — Data Analyst • Built with ♥ on GitHub Pages</div>
+  </footer>
+
+  <script>
+    // YEAR
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // ---- PROJECTS ----
+    // This template tries to load /data/projects.json. Example schema below.
+    const fallbackProjects = [
+      {
+        title: "Sales KPI Dashboard",
+        summary: "Power BI dashboard for weekly executive review across regions and SKUs.",
+        tags: ["power-bi","dashboard","dax"],
+        link: "#",
+      },
+      {
+        title: "A/B Test Evaluator",
+        summary: "Python tool to validate experiments (power, sample size, CUPED).",
+        tags: ["python","statistics","experimentation"],
+        link: "#",
+      },
+      {
+        title: "SQL Cohort Retention",
+        summary: "CTE + window functions to compute monthly retention for an app.",
+        tags: ["sql","analytics"],
+        link: "#",
+      },
+    ];
+
+    const TAG_ORDER = ["sql","python","power-bi","tableau","excel","dashboard","etl","statistics","experimentation","viz","automation"];
+
+    async function loadProjects(){
+      try{
+        const res = await fetch('data/projects.json', {cache:'no-store'});
+        if(!res.ok) throw new Error('no file');
+        const json = await res.json();
+        renderProjects(json.projects || json); // supports {projects:[...]} OR [...]
+      }catch(e){
+        renderProjects(fallbackProjects);
+      }
+    }
+
+    function renderProjects(projects){
+      const allTags = [...new Set(projects.flatMap(p => p.tags||[]))];
+      const filters = document.getElementById('filters');
+      const grid = document.getElementById('projectGrid');
+
+      let active = 'all';
+      function draw(){
+        grid.innerHTML = '';
+        projects
+          .filter(p => active==='all' || (p.tags||[]).includes(active))
+          .forEach(p => {
+            const card = document.createElement('article');
+            card.className = 'card project';
+            card.innerHTML = `
+              <h3>${p.title}</h3>
+              <p class="muted">${p.summary||''}</p>
+              <div class="tagrow">${(p.tags||[]).map(t=>`<span class='tag'>${t}</span>`).join('')}</div>
+              ${p.link ? `<a href='${p.link}' target='_blank' rel='noreferrer'>View project →</a>`: ''}
+            `;
+            grid.appendChild(card);
+          });
+      }
+
+      // FILTER BUTTONS
+      const tagsSorted = allTags.sort((a,b)=> TAG_ORDER.indexOf(a) - TAG_ORDER.indexOf(b));
+      filters.innerHTML = '';
+      const allBtn = document.createElement('button');
+      allBtn.className = 'btn btn-ghost';
+      allBtn.textContent = 'All';
+      allBtn.onclick = () => {active='all'; draw();};
+      filters.appendChild(allBtn);
+
+      tagsSorted.forEach(tag=>{
+        const btn = document.createElement('button');
+        btn.className = 'btn btn-ghost';
+        btn.textContent = tag;
+        btn.onclick = () => {active = tag; draw();};
+        filters.appendChild(btn);
+      });
+
+      draw();
+    }
+
+    loadProjects();
+  </script>
 </body>
 </html>
-<!-- rebuild -->
