--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       <div>
         <h3 style="margin:0 0 6px; font-size:16px;">Currently</h3>
-        <p class="muted" style="margin:0;">Data Analyst at VertoFx • Learning Korean • Exploring event-tech analytics</p>
+        <p class="muted" style="margin:0;">Data Analyst at Verto • Learning Korean • Exploring event-tech analytics</p>
       </div>
     </aside>
   </header>
@@ -154,8 +154,8 @@
       <h2>Experience</h2>
       <div class="timeline">
         <div class="role">
-          <h3>Data Analyst — <span class="muted">VertoFx</span></h3>
-          <div class="muted">Apr 2024 – Present • Remote</div>
+          <h3>Data Analyst — <span class="muted">Verto</span></h3>
+          <div class="muted">Apr 2024 – Present • Pune</div>
           <ul class="muted" style="line-height:1.6;">
             <li>Designed executive-level Power BI dashboards for transactions and adoption metrics.</li>
             <li>Developed AWS Athena, S3, and Glue pipelines for scalable reporting.</li>
@@ -185,12 +185,11 @@
           <div class="muted">Aug 2019 – Dec 2019 • Mumbai</div>
           <ul class="muted" style="line-height:1.6;">
             <li>Supported automation and data logging in manufacturing operations.</li>
-            <li>Collaborated on PLC programming and troubleshooting systems.</li>
           </ul>
         </div>
         <div class="role">
-          <h3>Research Assistant — <span class="muted">KIST, Seoul</span></h3>
-          <div class="muted">Jun 2018 – Jul 2018 • Seoul</div>
+          <h3>Research Assistant — <span class="muted">Korea Institute of Science and Technology</span></h3>
+          <div class="muted">Jun 2018 – Jul 2018 • Seoul, South Korea</div>
           <ul class="muted" style="line-height:1.6;">
             <li>Conducted applied research on Smart Highways and Piezoelectric materials.</li>
             <li>Supported innovation reporting and experimental analysis.</li>
@@ -207,12 +206,16 @@
           <div class="muted">University of Essex, UK • 2021 – 2022</div>
         </div>
         <div class="card" style="padding:16px;">
-          <h3>B.Tech Electronics Engineering (Honors in IoT)</h3>
+          <h3>B.Tech Electronics Engineering</h3>
           <div class="muted">Vishwakarma Institute of Technology, India • 2016 – 2020</div>
         </div>
         <div class="card" style="padding:16px;">
+          <h3>Honors in Industrial Internet of Things(IOT)</h3>
+          <div class="muted">Vishwakarma Institute of Technology, India • 2017 – 2019</div>
+        </div>
+        <div class="card" style="padding:16px;">
           <h3>Certifications & Workshops</h3>
-          <div class="muted">Power BI • Tableau • SQL • AI Prompt Engineering • Data Storytelling</div>
+          <div class="muted">Power BI • Tableau • SQL • AI Prompt Engineering</div>
         </div>
       </div>
     </section>
