--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <p class="muted">Reach out for freelance projects, collaborations, or data analytics opportunities.</p>
       <div class="cta">
         <a class="btn btn-primary" href="mailto:sanimorankar@gmail.com">Email</a>
-        <a class="btn btn-ghost" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn btn-ghost" href="https://https://www.linkedin.com/in/sanika-morankar//" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn btn-ghost" href="https://github.com/san1201" target="_blank" rel="noreferrer">GitHub</a>
       </div>
     </section>
